--- a/src/components/sg-content/sg-content.css
+++ b/src/components/sg-content/sg-content.css
@@ -63,10 +63,38 @@ background: #125887;
   background-color: rgba(70, 210, 119, 0.05);
  }
 
- #non-printable {
+
+ #non-printable  {
   margin-bottom: 8px;
+  display: inline-block;
+  outline: 0;
   cursor: pointer;
- }
+  padding: 5px 16px;
+  font-size: 14px;
+  font-weight:610;
+  line-height: 20px;
+  vertical-align: middle;
+  border: 1px solid;
+  border-radius: 6px;
+  color: #0f1010;
+  background-color: #fafbfc;
+  border-color: #1b1f2326;
+  box-shadow: rgba(27, 31, 35, 0.04) 0px 1px 0px 0px, rgba(255, 255, 255, 0.25) 0px 1px 0px 0px inset;
+  transition: 0.2s cubic-bezier(0.3, 0, 0.5, 1);
+  transition-property: color, background-color, border-color;
+}
+
+#non-printable:hover {
+  color: #ffffff;
+  background-color: #0366d6;
+  border-color: #1b1f2326;
+  box-shadow: rgba(27, 31, 35, 0.1) 0px 1px 0px 0px, rgba(255, 255, 255, 0.03) 0px 1px 0px 0px inset;
+  transition-duration: 0.1s;
+}
+
+
+
+
 
 
 /* Print Style */
